--- a/AI.csproj
+++ b/AI.csproj
@@ -58,28 +58,33 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="A.cs" />
-    <Compile Include="DB.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Algorithm\A.cs" />
+    <Compile Include="Data Structure\ComboBoxItem.cs" />
+    <Compile Include="DB\CONNECTION_DB.cs" />
+    <Compile Include="DB\DB.cs" />
+    <Compile Include="Form\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Form\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="InfoForm.cs">
+    <Compile Include="Form\InfoForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InfoForm.Designer.cs">
+    <Compile Include="Form\InfoForm.Designer.cs">
       <DependentUpon>InfoForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="POINT.cs" />
+    <Compile Include="DB\LOCATION_DB.cs" />
+    <Compile Include="DB\NAME_DB.cs" />
+    <Compile Include="Data Structure\NODE.cs" />
+    <Compile Include="Data Structure\POINT.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UCS.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <Compile Include="Algorithm\UCS.cs" />
+    <EmbeddedResource Include="Form\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InfoForm.resx">
+    <EmbeddedResource Include="Form\InfoForm.resx">
       <DependentUpon>InfoForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
