--- a/AI.csproj
+++ b/AI.csproj
@@ -155,6 +155,9 @@
   <ItemGroup>
     <None Include="Resources\Map2%281%29.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Map3.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets" Condition="Exists('packages\Selenium.Chrome.WebDriver.85.0.0\build\Selenium.Chrome.WebDriver.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
